Support keyboard event forwarding from ViewTree to inputbar-less views.

BUG:290838